--- a/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
@@ -57,6 +57,10 @@
 
 - 6MP(+1), 2LP, 弱竜巻: 1320
 
+## 2MK
+
+- {気} 2MK, OD波掌(気), HP, 強足刀: 2480
+
 ## 2MK, cDR LP
 
 中足をガードされても連続ガードになる。
@@ -95,8 +99,6 @@
 ## HP(pc)
 
 - {端} HP(pc), 強足刀, 中昇竜: 3220 (C限定)
-- HP(pc), 強波掌, DR HP, 強昇竜: 3056
-- HP(pc), 強波掌, DR HP, 強昇竜, SA3: 5056
 
 ## HP, cDR HP
 
@@ -109,16 +111,38 @@
 - HP, cDR HP, 2MP, OD波掌, SA2: 3637
 - HP, cDR HP, 強波掌, DR HP, 強昇竜, SA3: 5210/5056
 
-## 6HP
+## HP(pc), 強波掌
+
+- HP(pc), 強波掌, 中足刀: 2720 38F
+- HP(pc), 強波掌, 中竜巻: 2560 27F
+- HP(pc), 強波掌, DR 4HK, 強昇竜: 3130
+- {端} HP(pc), 強波掌, DR 4HK, CR 4HP, CR 2HP, 強足刀, 強昇竜: 4206 (C限定)
+- HP(pc), 強波掌, DR 4HK, 強昇竜, SA3: 5130
+- HP(pc), 強波掌, DR 4HK, CR 4HK, CR 4HK, 強昇竜, SA3: 5772
+- {端} HP(pc), 強波掌, DR 4HK, CR 4HP, CR 2HP, 強足刀, 強昇竜, SA3: 6206 (C限定)
+
+確反よりは差し返し気味に置く。
+
+## 6HP, LK
+
+- 6HP, LK, 弱足刀: 1980 42F (C限定)
+- 6HP, LK, 中竜巻: 1900 23F
+- 6HP, LK, 弱竜巻: 1820 35F (C限定)
+- {端} 6HP, LK, OD竜巻, 強昇竜: 2880 39F
+- {気} 6HP, LK, OD竜巻, SA1: 3580 31F
+
+6HP先端ではこちら。
+
+## 6HP, 2MP
 
 - 6HP, 2MP, 強昇竜: 2520
+- 6HP, 2MP, CR HK, HP, 強昇竜: 3198 (C限定)
+- {端} 6HP, 2MP, CR HP, 4HP, 強足刀, 中昇竜: 3583 32F (C限定)
 - (端) 6HP, 2MP, cDR HP, 強波掌, 4HK, 強昇竜: 3096
 - 6HP, 2MP, 強昇竜, SA3: 4920/4296
 - (端) 6HP, 2MP, cDR HP, 強波掌, 4HK, 強昇竜, SA3: 5096
 
-## 6HP 遠め
-
-- 6HP, LK, 弱足刀: 1980
+6HPが届いても2MPが届かないことがある。
 
 ## 6HP(+2)
 
