--- a/games/Street-Fighter/Six/characters/Ryu/リュウの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの練習メニュー.md
@@ -1,3 +1,22 @@
+## 共通のトレーニング設定
+
+（ダミー設定 > ガード: ランダム）
+（ダミー設定 > 起き上がり: 後方受け身）
+
+## ラッシュ攻撃からのコンボ
+
+- DR MP(g), 2MP,
+- DR MP, HP, 強昇竜, DR MP, ...
+
+## 飛び道具を使った差し合い
+
+（対空練習）
+
+- 前進, 弱波動
+- 前進, 2MK, 弱波動
+
+波動の前に斜め後ろをしっかり入れるのが大事。
+
 ## 対空
 
 （対空練習）
@@ -7,7 +26,18 @@
 
 自分が何もしてなかったら2HP、中足や波動を出していたら昇竜で対空する。
 
-## 確反 (C限定)
+## 柔道
+
+（反撃設定 > ダウンリバーサル: 4F技）
+
+- 前投げ, 前投げ, ...
+- 前投げ, {垂直ジャンプ}, 強昇竜, ...
+
+## 6HPからOD足刀に繋ぐコンボ
+
+- 6HP, 2MP, OD足刀, 前進, 6HP, 弱竜巻, ステップ 2回, 投げ
+
+## 昇竜やSAの確反 (C)
 
 （確反練習）
 
@@ -21,20 +51,18 @@
 
 ## DI(壁)
 
-## 飛び道具
-
-- 前進, 弱波動
-- 前進, 2MK, 弱波動
-
-波動の前に斜め後ろをしっかり入れるのが大事。
-
-## 柔道
-
-（反撃設定 > ダウンリバーサル: 4F技）
-
-- 前投げ, 前投げ, ...
-- 前投げ, {垂直ジャンプ}, 強昇竜, ...
-
 ## ジャンプ攻撃からのコンボ
 
 - J.HP, HP, cDR HP, 強波掌, 中足刀
+
+## 弱攻撃からのコンボ
+
+- 2LP/2LK, LP, 弱竜巻, ステップ, 投げ/後退
+- 2LP/2LK(g), LP, 弱波掌, ガード
+
+## 弱攻撃からのコンボ
+
+（ダウンリバーサル: 4F技）
+
+- 2LP/2LK, LP, 強昇竜, ステップ, 6HP, 2MP, 強昇竜, ...
+- 2LP/2LK, LP, 強昇竜, ステップ, 前投げ
