--- a/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
@@ -6,8 +6,9 @@
 
 ## LP(c)
 
-- LP(c), LK, 弱足刀: 1370
-- LP(c), LK, 弱足刀, SA3: 3370
+- LP(c), LK, 弱足刀: 1370 (C限定)
+- LP(c), LK, 中竜巻: 1300
+- LP(c), LK, 弱足刀, SA3: 3370 (C限定)
 
 ## 2LP
 
@@ -23,13 +24,13 @@
 ## MP
 
 - MP, 2MP, 強昇竜: 2320/2096
-- MP, 2MP, cDR HP, 強波掌, 中足刀: 2696
-- MP, 2MP, cDR HP, MP, 強昇竜: 2812/2658
-- MP, 2MP, cDR HP, 強波掌, DR HP, 強昇竜: 3212/3100
+- MP, 2MP, CR HP, 強波掌, 中足刀: 2696
+- MP, 2MP, CR HP, MP, 強昇竜: 2812/2658
+- MP, 2MP, CR HP, 強波掌, DR HP, 強昇竜: 3212/3100
 - MP, 2MP, OD撃, SA2: 3660(AC2)
 - MP, 2MP, 強昇竜, SA3: 4720/4096
-- MP, 2MP, cDR HP, MP, 強昇竜, SA3: 4812/4658
-- MP, 2MP, cDR HP, 強波掌, DR HP, 強昇竜, SA3: 5212/5100
+- MP, 2MP, CR HP, MP, 強昇竜, SA3: 4812/4658
+- MP, 2MP, CR HP, 強波掌, DR HP, 強昇竜, SA3: 5212/5100
 
 ## MP, 2HP (C限定)
 
@@ -45,7 +46,7 @@
 ## MP(pc)
 
 - MP(pc), 2HP, 強昇竜: 2640
-- (端) MP(pc), 2HP, OD竜巻, 強昇竜: 3300
+- {端} MP(pc), 2HP, OD竜巻, 強昇竜: 3300
 
 ## 2MP
 
@@ -61,55 +62,59 @@
 
 - {気} 2MK, OD波掌(気), HP, 強足刀: 2480
 
-## 2MK, cDR LP
+## 2MK, CR LP
 
 中足をガードされても連続ガードになる。
 
-- 2MK, cDR LP, MP, 2MP, 強昇竜: 1952/1840
-- 2MK, cDR LP, MP, 2MP, OD撃, SA2: 2902
+- 2MK, CR LP, MP, 2MP, 強昇竜: 1952/1840
+- {端} 2MK, CR LP, 4HP, 強足刀, 中昇竜: 2343 (C限定)
+- 2MK, CR LP, MP, 2MP, OD撃, SA2: 2902
 
-モダン向け:
+## 2MK, CR MP
 
-- 2MK, cDR LP, MP, LK, 弱足刀: 1673
-
-## 2MK, cDR MP
+- 2MK, CR MP, MP, LK, 弱足刀: 1877
+- 2MK, CR MP, HP/4HP, 強昇竜: 2094/1940
+- 2MK, CR MP, 4HP, 強足刀, 中昇竜: 2547 (C限定)
+- 2MK, CR MP, HP/4HP, 強昇竜, SA3: 4094/3940
 
 中足をガードされても割り込まれない。
 
-- 2MK, cDR MP, MP, LK, 弱足刀: 1877
-- 2MK, cDR MP, HP, 強昇竜: 2094/1940
-- 2MK, cDR MP, HP, 強昇竜, SA3: 4094/3940
+## 2MK, CR HP
 
-## 2MK, cDR HP
+- 2MK, CR HP, 強波掌, 中足刀: 1996
+- 2MK, CR HP, MP, 強昇竜: 2112/1958
+- 2MK, CR HP, 強波掌, DR HP, 強昇竜: 2512/2400
+- 2MK, CR HP, 2MP, OD撃, SA2: 3017
+- 2MK, CR HP, MP, 強昇竜, SA3: 4112/3958
+- 2MK, CR HP, 強波掌, DR HP, 強昇竜, SA3: 4512/4400
 
 中足をガードされていると割り込まれる。
-
-- 2MK, cDR HP, 強波掌, 中足刀: 1996
-- 2MK, cDR HP, MP, 強昇竜: 2112/1958
-- 2MK, cDR HP, 強波掌, DR HP, 強昇竜: 2512/2400
-- 2MK, cDR HP, 2MP, OD撃, SA2: 3017
-- 2MK, cDR HP, MP, 強昇竜, SA3: 4112/3958
-- 2MK, cDR HP, 強波掌, DR HP, 強昇竜, SA3: 4512/4400
 
 ## (気) HP, OD波掌
 
 - (気) HP, OD波掌, HP, 強昇竜: 3220/3024
 - (気) HP, OD波掌, HP, 強昇竜, SA3: 5220/5024
 
-## HP(pc)
+## DR HP
 
-- {端} HP(pc), 強足刀, 中昇竜: 3220 (C限定)
+- DR HP, 4HP
 
-## HP, cDR HP
+ラッシュなら密着できるので4HPが入る。
+
+## HP, CR HP
+
+- HP, CR HP, 強波掌, 中足刀: /2588
+- HP, CR HP, MP, 強昇竜: 2714/2546
+- {端} HP, CR HP, 強波掌, 4HK, 強昇竜: 2974/2820
+- HP, CR HP, 強波掌, DR HP, 強昇竜: 3210/3056
+- HP, CR HP, 2MP, OD波掌, SA2: 3637
+- HP, CR HP, 強波掌, DR HP, 強昇竜, SA3: 5210/5056
 
 ガードされても連続ガードになる。
 
-- HP, cDR HP, 強波掌, 中足刀: /2588
-- HP, cDR HP, MP, 強昇竜: 2714/2546
-- (端) HP, cDR HP, 強波掌, 4HK, 強昇竜: 2974/2820
-- HP, cDR HP, 強波掌, DR HP, 強昇竜: 3210/3056
-- HP, cDR HP, 2MP, OD波掌, SA2: 3637
-- HP, cDR HP, 強波掌, DR HP, 強昇竜, SA3: 5210/5056
+## HP(pc)
+
+- {端} HP(pc), 強足刀, 中昇竜: 3220 (C限定)
 
 ## HP(pc), 強波掌
 
@@ -136,11 +141,12 @@
 ## 6HP, 2MP
 
 - 6HP, 2MP, 強昇竜: 2520
+- 6HP, 2MP, OD足刀, 前進, 6HK, 竜巻:
 - 6HP, 2MP, CR HK, HP, 強昇竜: 3198 (C限定)
 - {端} 6HP, 2MP, CR HP, 4HP, 強足刀, 中昇竜: 3583 32F (C限定)
-- (端) 6HP, 2MP, cDR HP, 強波掌, 4HK, 強昇竜: 3096
+- {端} 6HP, 2MP, CR HP, 強波掌, 4HK, 強昇竜: 3096
 - 6HP, 2MP, 強昇竜, SA3: 4920/4296
-- (端) 6HP, 2MP, cDR HP, 強波掌, 4HK, 強昇竜, SA3: 5096
+- {端} 6HP, 2MP, CR HP, 強波掌, 4HK, 強昇竜, SA3: 5096
 
 6HPが届いても2MPが届かないことがある。
 
@@ -153,8 +159,9 @@
 
 ## HK(pc) (C限定)
 
-- HK(pc), HP, 強昇竜
+- HK(pc), HP, 強昇竜: 3000
 - {端} HK(pc), 4HP, 強足刀, 中昇竜: 3760
+- {端} HK(pc), HP, CR HP, 4HP, 強足刀, 中昇竜: 4063
 
 ## 4HK
 
@@ -164,7 +171,7 @@
 
 ## 6HK
 
-- (端) 6HK, OD竜巻, 強昇竜: 2728
+- {端} 6HK, OD竜巻, 強昇竜: 2728
 
 ## DR HP
 
@@ -174,13 +181,21 @@
 ## DI(pc)
 
 - DI(pc), 6HP, 2MP, 強昇竜: 2860
-- {端} DI(pc), 4HP, 強足刀, 中昇竜: 3230 (C限定)
+- DI(pc), 6HP, 2MP, CR HK, HP, 強昇竜: 3291
+- {端} DI(pc), 4HP, 強足刀, 中昇竜: 3230 32F (C限定)
+- {端} DI(pc), 4HP, 強足刀, OD昇竜: 3470 28F (C限定)
+- {端} DI(pc), 6HP, 2MP, OD竜巻, 強昇竜: 3320
+- {端} DI(pc), 6HP, 2MP, OD竜巻, OD昇竜: 3420
+- DI(pc), HK, 2MK, OD竜巻, 強昇竜: 3330 (C限定)
+- DI(pc), 6HP, 2MP, CR HP, 4HP, 強足刀, 中昇竜: 3506 (C限定)
+- DI(pc), 6MP, 2MP, OD足刀, 前進, 6HK, 弱竜巻: 3175
+- DI(pc), HK, 2MK, OD足刀, 前進, 6HK, 弱竜巻: 3185 (C限定)
 - DI(pc), 6HP, 2MP, OD波掌, SA2: 3800
-- DI(pc), 6HP, 2MP, cDR MP, HP, cDR MP, HP, 強昇竜, SA3: 5248
+- DI(pc), 6HP, 2MP, CR MP, HP, CR MP, HP, 強昇竜, SA3: 5248
 
 ## DI(壁)
 
-- DI(壁), HP, 中波掌, 強昇竜: 2840/2672
+- DI(壁), HP, 中波掌, 強昇竜: 2840/2672 37F
 - DI(壁), HP, 中波掌, 強昇竜, SA3: 4840/4672
 
 ## 弱波掌(c)
@@ -195,16 +210,18 @@
 ## 中波掌(c)
 
 - 中波掌(c), DR 2MP, 中竜巻: /2010
-- (端) 中波掌(c), 強昇竜: 2360/2080
+- {端} 中波掌(c), 強昇竜: 2360/2080
 
 ## 強波掌
 
-- (端) 強波掌, 強昇竜: 2200/1920
-- (端) 強波掌, 4HK, 強昇竜: 2320/2096
+- {端} 強波掌, 強昇竜: 2200/1920
+- {端} 強波掌, 4HK, 強昇竜: 2320/2096
 - 強波掌, DR HP, 強昇竜: 2432/2236
 - 強波掌, DR HP, 強昇竜, SA3: 4472/4236
-- (端) 強波掌, 4HK, 強昇竜, SA3: 4720/4096
+- {端} 強波掌, 4HK, 強昇竜, SA3: 4720/4096
 
-## その他
+## Memo
 
 https://note.com/nikotarosun/n/n11a2e2311fbd
+
+6HK, 竜巻は強弱がない。
