--- a/games/Street-Fighter/Six/characters/Ryu/リュウの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの練習メニュー.md
@@ -5,7 +5,7 @@
 
 ## ラッシュ攻撃からのコンボ
 
-- DR MP(g), 2MP,
+- DR MP(g), HP, 弱波掌, ガード
 - DR MP, HP, 強昇竜, DR MP, ...
 
 ## 飛び道具を使った差し合い
@@ -33,10 +33,6 @@
 - 前投げ, 前投げ, ...
 - 前投げ, {垂直ジャンプ}, 強昇竜, ...
 
-## 6HPからOD足刀に繋ぐコンボ
-
-- 6HP, 2MP, OD足刀, 前進, 6HP, 弱竜巻, ステップ 2回, 投げ
-
 ## 昇竜やSAの確反 (C)
 
 （確反練習）
@@ -54,6 +50,10 @@
 ## ジャンプ攻撃からのコンボ
 
 - J.HP, HP, cDR HP, 強波掌, 中足刀
+
+## 6HPからOD足刀に繋ぐコンボ
+
+- {中央} 6HP, 2MP, OD足刀, 前進, 6HP, 弱竜巻, ステップ 2回, 投げ
 
 ## 弱攻撃からのコンボ
 
