--- a/games/Street-Fighter/Six/characters/使用キャラを選ぶ.md
+++ b/games/Street-Fighter/Six/characters/使用キャラを選ぶ.md
@@ -5,6 +5,7 @@
 - アシストコンボが優秀
 - 発生の早いノーゲージ対空無敵技がある
 - 発生の早いOD完全無敵技がある
+- SA1に無敵がある
 - コンボや対空に溜めが要らない
 
 ## 最初に選ぶキャラ
@@ -37,11 +38,32 @@
 
 スト6はモダンがあるので、最初に選ぶキャラはタメキャラじゃない方がいい。SPで無敵昇竜が出るキャラがいい。
 
+## モダン適性が高いキャラ
+
+ほぼ性能が落ちない:
+
+- ルーク
+- リリー
+- ザンギ
+- キンバリー
+- ジュリ
+- 本田
+- ベガ
+- 舞
+- ラシード
+
+あまり性能が落ちない:
+
+- 春麗
+- マリーザ
+- ケン
+- ED
+
 ## 個人的にきつかったキャラ
 
 - Mジェイミー: 火力が低いわりに酒で攻めが切れやすい、OD無影蹴とコマ投げが強いのでもっと使っても良かったかも
 - M豪鬼: 体力がない、Mは特に火力が出せないし立ち回りも弱い
-- Mダルシム: SA2にも無敵がない、Mじゃなくても守りがきつい
+- ダルシム: SA2にも無敵がない、Mじゃなくても守りがきつい
 - Mガイル: Mは特に中段とHPがなくて火力が出せない
 
 ## その他
