--- a/games/Street-Fighter/Six/characters/Ryu/リュウの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの練習メニュー.md
@@ -6,7 +6,8 @@
 ## ラッシュ攻撃からのコンボ
 
 - DR MP(g), HP, 弱波掌, ガード
-- DR MP, HP, 強昇竜, DR MP, ...
+- DR MP, HP, 強昇竜
+  - DR 投げ
 
 ## 飛び道具を使った差し合い
 
@@ -49,11 +50,13 @@
 
 ## ジャンプ攻撃からのコンボ
 
-- J.HP, HP, cDR HP, 強波掌, 中足刀
+## OD技に繋ぐコンボ
 
-## 6HPからOD足刀に繋ぐコンボ
+- {中央} 6HP, 2MP, OD足刀, 前進, 6HK, 弱竜巻
+  - ステップ 2回, 投げ
+- {端} 6HP, 2MP, OD竜巻, 強昇竜
 
-- {中央} 6HP, 2MP, OD足刀, 前進, 6HP, 弱竜巻, ステップ 2回, 投げ
+6HKを引きつけないと投げ間合いにならない。
 
 ## 弱攻撃からのコンボ
 
