--- a/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
@@ -121,6 +121,7 @@
 - HP(pc), 強波掌, 中足刀: 2720 38F
 - HP(pc), 強波掌, 中竜巻: 2560 27F
 - HP(pc), 強波掌, DR 4HK, 強昇竜: 3130
+- {端} HP(pc), 強波掌, 4HK, 強昇竜: 3060
 - {端} HP(pc), 強波掌, DR 4HK, CR 4HP, CR 2HP, 強足刀, 強昇竜: 4206 (C限定)
 - HP(pc), 強波掌, DR 4HK, 強昇竜, SA3: 5130
 - HP(pc), 強波掌, DR 4HK, CR 4HK, CR 4HK, 強昇竜, SA3: 5772
