--- a/games/Street-Fighter/Six/characters/Ryu/リュウの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの攻めの状況.md
@@ -8,6 +8,8 @@
 
 ## HP-HK: 36
 
+- 2LP, 6MP(+2)
+
 ## HP-HK-練気: 7
 
 端ではMP(+2)が重なる。
@@ -24,7 +26,11 @@
 
 ## 2HK(pc): 47
 
+- ステップ, DR 6MP
+
 ## 前投げ: 17
+
+投げや中段で崩すのが難しいので、無理に攻めなくていい。
 
 中央でもDR HPが重なる。
 4F技には相打ちからHPが入る。
@@ -33,6 +39,12 @@
 
 - DR HP: 4F遅れ、相打ちにはHPが入る
 - DR MP
+
+## {端} 前投げ: 17
+
+- LP, 前投げ: 柔道
+
+フレーム消費すると簡単だけど後退できないので、目押しで重ねた方がいい。
 
 ## 後投げ: 11
 
@@ -43,6 +55,8 @@
 - ステップ, 弱波掌(+5): ヒットで+7、ガードで+2の投げ間合い
 
 ## 中昇竜: 34
+
+- {端} 強波掌
 
 ## 強昇竜: 37
 
@@ -82,13 +96,18 @@ MP, 4HP, OD波掌以外ではほぼ密着できないと思っていい。
 
 ## 強竜巻: 20
 
+## {端} OD竜巻, 強昇竜
+
+- HK (C限定)
+  - MP
+  - 前投げ
+  - 後退: シミー
+
 ## 弱足刀: 42
 
 - J.HP/J.HK: 5F詐欺
 
 ## 中足刀: 40
-
-## 強足刀: 45 (C限定)
 
 ## {端} 強足刀, 弱昇竜: 37 (C限定)
 
