--- a/games/Street-Fighter/Six/characters/Ryu/リュウの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの攻めの選択肢.md
@@ -1,26 +1,31 @@
 ## 2LK, 2LP
 
-## MP
+## MP: 3-8
 
 ヒットして+7、ガードされて投げの外で-1になる。
 
-## 2MP
+## 2MP: 3-8
 
-ヒットして+5、ガードされて五分になる。
+ヒットで+5、ガードされても投げ間合いの外で五分になる。
 弱足刀から詐欺跳びを狙える端で使うと無難な攻めになる。
 
-- (端) 2MP, LK, 弱足刀
+## DR MP: 14-19
 
-## 6HP
+ヒットで+11、ガードされて+3で投げ間合いになる。
 
-ガードされて+3になる。
+中央の前投げからも重なるけど密着できない。
+密着できない場合は逆に相手の弱攻撃が届かないくらい離れるのでHPでいい。
 
-## DR MP
+## 6HP: 17-23
 
-## DR HP
+## DR HP: 18-24
 
-## DR 6MP
+ヒットで+8、ガードされて+2で投げ間合いの外。
+
+## DR 6MP: 28-33
 
 ## 強波掌: 26-34
 
 ガードされても+2で投げ間合い。
+
+2ヒット技なので、持続当てにしても有利フレームは変わらない。
