--- a/shared/achievement/結果.md
+++ b/shared/achievement/結果.md
@@ -1,4 +1,4 @@
-# Output
+# Output / Result
 
 人と会うのは強制的に結果が得られるのでいいかもしれない。特に面接みたいな目的があって会うやつ。
 
@@ -9,3 +9,5 @@
 「結果だけを求めていると人は近道したがるものだ」（『ジョジョの奇妙な冒険』第5部）
 
 結果はなんらかの仕事になるはずだ。なんらかの変化を自分や周囲に生じる。
+
+過程の良さは次に繋がる再現性を目指した良さだけど、本番が一回きりしかないと結果の良さしか関係ない。練習では再現性を高めていって、どうしても勝ちたいところでは運任せでも勝たないといけない。ただ、何も考えてない運任せでは勝てない。再現性をできるだけ高めた上で必要なリスクを取る。
