--- a/shared/art/技術.md
+++ b/shared/art/技術.md
@@ -135,3 +135,7 @@ engineeringは理論的。
 理論と実践。theoryとpractice。
 
 芸術的な技術はあくまでも表現のためにある。手段と目的が逆転してはいけない。
+
+繊細で理論的な技術と、必要性に迫られたガサツで泥臭い技術。
+
+場当たり的で目先の解決を目指す救急救命術と根本的な解決を目指す治療術のどちらも必要。
