--- a/study/politics/violence/差別と偏見.md
+++ b/study/politics/violence/差別と偏見.md
@@ -37,3 +37,8 @@
 「ナチスが正しかった」とは言わせないでほしい。
 
 イスラエル人のようなレイシストを殺すのはレイシズムかどうか。
+
+差別心は肯定していい。
+重要なのは、心と態度を切り離すこと。嫌いな人であっても、お互いに一歩引いて共生すること。その上で共生できるようにお互いの自由を制限すること。
+
+人間は差別が大好きなので、「差別がダメ」と主張するのは現実的じゃない。
