--- a/shared/care/情.md
+++ b/shared/care/情.md
@@ -65,3 +65,9 @@ careというのは、対象を失わせないための技術。
 ただ、もっと手間をかけた方が好かれやすいかも。
 
 情はある種の執着でもある。
+
+まずは自分のことをしてから、他を心配するべき。
+
+情を拒むのは良くない。福祉を手放さない。
+
+内側に向かう、あるいは内側から与えられるHealthと、外側に向かう、あるいは外側から与えられるWealthがある。
