--- a/study/economics/資本主義.md
+++ b/study/economics/資本主義.md
@@ -27,3 +27,8 @@
 プロレタリアを味方につけたブルジョワは強い。
 
 プロレタリアに見放されたブルジョワは、いずれ殺されて、全てを奪われる。
+
+農耕社会の強みは貯蓄ができるところであって、そこに個人の偏りができるのは必然。農耕社会は狩猟社会よりも多くの人を養える。善悪はともかくこれは事実。貯蓄や資本主義をやめるということは農耕社会をやめるということで、それは養う人間を減らすということでしかない。
+だから、基本的には農耕社会や資本主義自体はやめられない。それは前提として、搾取のない社会を目指すなら、共産主義に代わる方法が必要。
+
+資本主義は正直農耕社会の根幹であって変えられるものではない。社会主義も共産主義もその前提が抜けている。資本主義は主義ではない。
