--- a/shared/work/仕事.md
+++ b/shared/work/仕事.md
@@ -318,3 +318,5 @@ job work と art work がある。
 
 Productと比べると、価値がなくても作業したらWorkになる。
 作るだけがWorkではなく、壊すのもWorkではある。
+
+Web小説の誤字報告なんかも別にお金をもらうわけではないけど仕事ではある。誤字報告によって文章が修正されれば影響を与えている。
