--- a/study/politics/authority/権威.md
+++ b/study/politics/authority/権威.md
@@ -8,3 +8,5 @@
 歴史や伝統が権威になる。
 
 決定に影響を与えるのが権威。ある種の決定権を持っている。
+
+数学は定理の組み合わせによって検証されるが、科学や医学など実験によって検証される分野ではまずどれかの研究結果を選んで信用するしかない。全ての研究結果を自分で検証するのは現実的に無理がある。そこで権威の問題が必ず関わってくる。
