--- a/shared/trust/reliability/予測可能性.md
+++ b/shared/trust/reliability/予測可能性.md
@@ -9,3 +9,6 @@
 行動原理、行動の根底にある価値観や判断を知らないと先読みできない。
 周囲に行動を先読みさせて安心させたいなら行動原理は公開したほうがいいし、先読みされたくない敵に対しては公開しなくてもいい。
 まぁ、行動原理を公開しても全てを先読みできるわけではないので、公開しても構わない。
+
+「想定通りに比べたら想定外なんてありふれた話さ」
+『ウマ娘 シンデレラグレイ』
