--- a/study/politics/violence/暴力.md
+++ b/study/politics/violence/暴力.md
@@ -22,3 +22,5 @@
 代わりに、貧しい人が富める人を殺して奪うことで資本主義による資本の偏りを正すのに役立つ。人間社会の発展の歴史は、個人の暴力の発展の歴史。特に銃火器の発展の歴史。
 
 「正論は暴力」というのは主語が小さすぎる。そもそも受け手が気に食わないことは全て暴力だ。
+
+暴力を振るうならそれが権力になるように正義の味方として振る舞う必要がある。
