--- a/games/Street-Fighter/Six/practice/上級者向け.md
+++ b/games/Street-Fighter/Six/practice/上級者向け.md
@@ -1,12 +1,25 @@
-- 小技ヒット確認
+ハイマス以上はとにかく精度の違い。
+まずはミスを減らす。
+
+- コマンド入力
+- コンボやセットプレイ
+- 確反
+- 暴れタイミング
+- 対空
+- ヒット確認
+- カウンター確認
+- 距離による技選択
+
+あとは細かいところも詰めることで少しでも勝率を上げる。
+
 - 弾のジャストパリィに仕込み
-- 確反インパクトでゲージを削る
-- 後歩きの無敵技、投げ抜け狩り
-- 返せない体力のときのインパクト
-- 狙ってBOさせてインパクト
-- スタンさせたら前歩きでゲージ回復を待つ
+- インパクトをコンボに入れてゲージを削る
+- 返せない体力の時を狙ってインパクト
+- BOさせて壁インパクト
+- BOさせて削り
 - パリィラッシュから弾抜けや対空
-- パリィ仕込み詐欺飛び
-- 下溜めパリィ
+- パリィ仕込みでDリバなどを自動ガードする
+- パリィで下溜めを維持しながら立ちガードする
+- スタンさせたら前歩きでゲージ回復を待つ
 
 https://youtu.be/4CqD7mLV8eo?si=vQ2zfX13qKo2ClN5
