--- a/shared/decision/判断.md
+++ b/shared/decision/判断.md
@@ -88,3 +88,7 @@ Know 知る
 決断するということは、行動するということだ。
 
 考えてもやることが変わらないなら考えなくていい。
+
+「選択肢というのは必ずしも分かれ道の直前にあるものではないのでしょう」『異世界居酒屋のぶ』
+
+分かれ道のもっと前の判断によって、結果が決まってしまうこともある。
