--- a/shared/music/vocal/training/tips/リズムを取る.md
+++ b/shared/music/vocal/training/tips/リズムを取る.md
@@ -70,3 +70,6 @@ BPM 150とかになるとまず8拍で手拍子するのが困難。腕もげる
 拍子が4/4でない曲はアクセント強めの方が聞いてる方もリズムを取りやすいかも。
 
 歌は声よりも息の段階でリズムを取る。
+
+腹から声を出せば自然と息のリズムは体のリズムに合う。
+まぁ、滑舌が悪いと発声はズレちゃうけど、アクセント自体はズレない。
