--- a/games/Street-Fighter/Six/characters/Zangief/ザンギエフの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Zangief/ザンギエフの立ち回り.md
@@ -8,6 +8,8 @@
 
 相手が端まで下がるなら地道に押し込んで火力を押し付ける。急いではいけない。あと端なら投げに行くのも簡単だし。
 
+ラッシュからMPと弱スクリューの択を狙えるのも強い。
+
 ## 攻め
 
 攻めているならDR 2LPで距離を詰めるのは悪くない。ガードさせて+5になる。
