--- a/games/Street-Fighter/Six/characters/Zangief/コンボの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Zangief/コンボの選択肢.md
@@ -5,6 +5,10 @@
 ザンギのラッシュで伸ばすのはDR 2MP, 3MPの繰り返しで良さそう。
 6HPなら、6HP, cDR 6HP, 3MPのルートもあるが、6HP, 3MP, cDR 2MP, 3MPでも十分。
 
+## 確反
+
+密着+5以上は強スクリューで3795減る。まずはこれが基本。
+
 ## LK, cDR 2LP
 
 - LK, cDR 2LP, 2MP, ODダブラリ, SA2: 2701
@@ -39,6 +43,14 @@
 - (端) 3HK(pc), 3MP, ダブラリ: 3120
 - (端) 3HK(pc), 3MP, SA1: 4100
 
+## 2HP(pc)
+
+- 2HP(pc), DR 6MK, 3MP, ダブラリ: 3165
+- {端} 2HP(pc), DR 6MK, 3MP, ODダブラリ, ODボルシチ: 4602
+- 2HP(pc), DR 6MK, 3MP, SA1: 3809
+- 2HP(pc), DR 6MK, 3MP, SA2, ODボルシチ: 4244
+- 2HP(pc), DR 6MK, 3MP, SA2, SA1: 4174
+
 ## 6HP
 
 - 6HP, 3MP, ダブラリ: 2920/2696
@@ -49,6 +61,11 @@
 - 6HP, ODダブラリ, SA3: 5060(AC3)
 - 6HP, 3MP, ODダブラリ, SA3: 5240/4648
 - 6HP, 3MP, cDR 2MP, 3MP, ODダブラリ, SA3: 5505/5428
+
+## HK(pc) (C限定)
+
+- HK(pc), DR 3MK, ダブラリ: 2832
+- {端} HK(pc), DR 3MK, ODダブラリ, ODボルシチ: 4566
 
 ## 6HK(pc)
 
