--- a/games/Street-Fighter/Six/characters/Zangief/コンボの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Zangief/コンボの選択肢.md
@@ -27,10 +27,10 @@
 
 ## 2HP(pc)
 
-- 2HP(pc), DR 6MK, 3MP, ODラリアット: 3342/3138
+- 2HP(pc), DR 6MK, 3MP, ODダブラリ: 3342/3138
 - 2HP(pc), DR 6MK, 3MP, SA2, ステップ, SA1: 4174/3641
 - 2HP(pc), DR 6MK, 3MP, SA2, ステップ, ODボルシチ: 4244/3874
-- (端) 2HP(pc), DR 6MK, 3MP, ODラリアット, ODボルシチ: 4602/4158
+- (端) 2HP(pc), DR 6MK, 3MP, ODダブラリ, ODボルシチ: 4602/4158
 
 ## (空) 3MP
 
@@ -75,7 +75,7 @@
 
 ## DR 6MK
 
-- DR 6MK, 2LK, LP, ODラリアット: 2460
+- DR 6MK, 2LK, LP, ODダブラリ: 2460
 
 ## DR 6HP(pc)
 
@@ -86,37 +86,37 @@
 - DI(pc), 強ロシアン: 2990/2584
 - DI(pc), 強スクリュー: 3270/2808
 - DI(pc), 強スクリュー: 3680/3136
-- DI(pc), 6HP, 3MP, ODラリアット, SA3: 5140
-- DI(pc), 6HP, 3MP, cDR 2MP, 3MP, ODラリアット, SA3: 5651
+- DI(pc), 6HP, 3MP, ODダブラリ, SA3: 5140
+- DI(pc), 6HP, 3MP, cDR 2MP, 3MP, ODダブラリ, SA3: 5651
 
 ## DI(壁)
 
-- DI(壁), 3MP, ラリアット: 2420/2224
-- DI(壁), 3MP, ODラリアット: 2630/2392
+- DI(壁), 3MP, ダブラリ: 2420/2224
+- DI(壁), 3MP, ODダブラリ: 2630/2392
 - DI(壁), 3MP, SA1: 3190/2490
-- DI(壁), 3MP, ODラリアット, ODボルシチ: 4130/3592
+- DI(壁), 3MP, ODダブラリ, ODボルシチ: 4130/3592
 
 ## スタン
 
-- DI(壁), バックジャンプ, ラリアット, 3MP, ODラリアット, ODボルシチ: 4700/4032
+- DI(壁), バックジャンプ, ダブラリ, 3MP, ODダブラリ, ODボルシチ: 4700/4032
 
-ラリアットを持続で当てると3MPで拾える。
-3MPを低めで当てて、ODラリアットが間隔を空けて2回当たるようにしないといけない。
+ダブラリを持続で当てると3MPで拾える。
+3MPを低めで当てて、ODダブラリが間隔を空けて2回当たるようにしないといけない。
 
 ## J.HK-h(pc)
 
-- J.HK-h(pc), 3MP, ラリアット: 3720/3496
-- J.HK-h(pc), 3MP, ODラリアット: 3960/3688
+- J.HK-h(pc), 3MP, ダブラリ: 3720/3496
+- J.HK-h(pc), 3MP, ODダブラリ: 3960/3688
 - J.HK-h(pc), 3MP, SA1: 4700/3860
 - J.HK-h(pc), 3MP, SA2, ODボルシチ: 5280/4740
 
-## ODラリアット
+## ODダブラリ
 
 主に対空から。
 
-- ODラリアット, SA2: 3860/3088
-- ODラリアット, SA2-h, ODボルシチ: 4040/3232
-- ODラリアット, SA2-h, ステップ, 3MP, SA1: 4190/3002
+- ODダブラリ, SA2: 3860/3088
+- ODダブラリ, SA2-h, ODボルシチ: 4040/3232
+- ODダブラリ, SA2-h, ステップ, 3MP, SA1: 4190/3002
 
 ## SA2
 
