--- a/games/Street-Fighter/Six/characters/Zangief/コンボの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Zangief/コンボの選択肢.md
@@ -17,13 +17,22 @@
 
 ## 2LP
 
-- 2LP 1-4: 930
+- 2LP 4回: 930
+- 2LP 3回; 弱スクリュー: 補正切り
+- 2LP 2回; 中スクリュー: 補正切り
+- 2LP 2回, 3MK: 補正切り
+- 2LP 1回; 強スクリュー: 補正切り
 
 ## 2MP, cDR 2MP
 
 - 2MP, cDR 2MP, 3MP, ダブラリ: 2665/2497
 - 2MP, cDR 2MP, 3MP, cDR 2MP, 3MP, ダブラリ: 3248/3136
 - 2MP, cDR 2MP, 3MP, ODダブラリ, SA3: 4652/4568
+
+## 2MK(+4)
+
+- 2MK(+4), 3MK, ダブラリ: 2320
+- 2MK(+4), 3MK, ODダブラリ, SA3: 4230
 
 ## 2HP(pc)
 
