--- a/games/Street-Fighter/Six/characters/Zangief/起き攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Zangief/起き攻めの選択肢.md
@@ -20,6 +20,15 @@ MP-MP-MPが繋がる。
 
 相打ちでも2MP, ダブラリが繋がる。
 
+## DR 2MK: 16-21
+
+ヒットすると3MKが入る。
+密着でガードされても+2で中スクリューの間合い。通常投げの外。
+
+- DR 2MK(g)
+  - 中スクリュー
+  - ガード: シミー
+
 ## DR 6MK: 21-30
 
 ヒットで5、ガードで1になる。
