--- a/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
@@ -21,6 +21,11 @@
 
 - 2LK, 2LP 2回, 強昇竜: 1490
 
+## 2LK
+
+- 2LK, MP, 2MP, OD足刀, 6HK, 竜巻: 2255
+- 2LK, MP, 2MP, OD足刀, 4HK, 強昇竜, SA3: 4250
+
 ## MP
 
 - MP, 2MP, 強昇竜: 2320/2096
@@ -43,6 +48,13 @@
 - (気) MP, 2MP, OD波掌, HP, 強昇竜: 3240/3072
 - (気) MP, 2MP, OD波掌, HP, 強昇竜, SA3: 5240/5072
 
+## MP(+4)
+
+- MP(+4), HP, 強昇竜: 2520
+- {中央} MP(+4), HP, OD足刀, 前進, 6HK, 竜巻: 3055
+- {端} MP(+4), HP, OD竜巻, 強昇竜: 3180 39F
+- {端} MP(+4), HP, OD竜巻, OD昇竜: 3320 30F
+
 ## MP(pc)
 
 - MP(pc), 2HP, 強昇竜: 2640
@@ -60,7 +72,15 @@
 
 ## 2MK
 
+- 2MK, 中足刀: 1460
+- 2MK, 弱波動: 1060
 - {気} 2MK, OD波掌(気), HP, 強足刀: 2480
+- 2MK, CR HP, 強波掌, 中竜巻: 2026 27F
+- 2MK, CR HP, MP, 強昇竜: 2112/1958
+- 2MK, CR HP, 強波掌, DR HP, 強昇竜: 2512/2400
+- 2MK, CR HP, 2MP, OD撃, SA2: 3017
+- 2MK, CR HP, MP, 強昇竜, SA3: 4112/3958
+- 2MK, CR HP, 強波掌, DR HP, 強昇竜, SA3: 4512/4400
 
 ## 2MK, CR LP
 
@@ -79,27 +99,10 @@
 
 中足をガードされても割り込まれない。
 
-## 2MK, CR HP
-
-- 2MK, CR HP, 強波掌, 中足刀: 1996
-- 2MK, CR HP, MP, 強昇竜: 2112/1958
-- 2MK, CR HP, 強波掌, DR HP, 強昇竜: 2512/2400
-- 2MK, CR HP, 2MP, OD撃, SA2: 3017
-- 2MK, CR HP, MP, 強昇竜, SA3: 4112/3958
-- 2MK, CR HP, 強波掌, DR HP, 強昇竜, SA3: 4512/4400
-
-中足をガードされていると割り込まれる。
-
 ## (気) HP, OD波掌
 
 - (気) HP, OD波掌, HP, 強昇竜: 3220/3024
 - (気) HP, OD波掌, HP, 強昇竜, SA3: 5220/5024
-
-## DR HP
-
-- DR HP, 4HP
-
-ラッシュなら密着できるので4HPが入る。
 
 ## HP, CR HP
 
@@ -112,9 +115,15 @@
 
 ガードされても連続ガードになる。
 
-## HP(pc)
+## HP(+4), 強波掌
 
-- {端} HP(pc), 強足刀, 中昇竜: 3220 (C限定)
+- HP(+4), 強波掌, 中竜巻: 2400
+- {端} HP(+4), 強波掌, 4HK, 強昇竜: 2900
+- HP(+4), 強波掌, DR 4HK, 強昇竜: 2970
+
+## HP(+4), 強足刀
+
+- {端} HP(+4), 強足刀, 中昇竜: 3060 (C限定)
 
 ## HP(pc), 強波掌
 
@@ -128,6 +137,12 @@
 - {端} HP(pc), 強波掌, DR 4HK, CR 4HP, CR 2HP, 強足刀, 強昇竜, SA3: 6206 (C限定)
 
 確反よりは差し返し気味に置く。
+
+## DR HP
+
+- DR HP, 4HP, 強足刀
+
+ラッシュなら密着できるので4HPが入る。
 
 ## 6HP, LK
 
@@ -161,8 +176,16 @@
 ## HK(pc) (C限定)
 
 - HK(pc), HP, 強昇竜: 3000
+- {中央} HK(pc), HP, OD足刀, 前進, 6HK, 竜巻: 3535
+- {中央} HK(pc), HP, OD足刀, 4HK, 強昇竜: 3550
 - {端} HK(pc), 4HP, 強足刀, 中昇竜: 3760
 - {端} HK(pc), HP, CR HP, 4HP, 強足刀, 中昇竜: 4063
+- {中央} HK(pc), HP, OD足刀, 4HK, 強昇竜, SA3: 5550
+- HK(pc), HP, 強昇竜, SA3: 5400
+- {端} HK(pc), 4HP, 強足刀, 中昇竜, SA3: 5760
+- HK(pc), HP, CR HK, HP, 強昇竜, SA3: 5678
+- {端} HK(pc), HP, CR HP, 4HP, 強足刀, 中昇竜, SA3: 6063
+- {端} HK(pc), HP, CR HK, HP, CR HP, 4HP, 強足刀, 中昇竜, SA3: 6450
 
 ## 4HK
 
@@ -172,7 +195,8 @@
 
 ## 6HK
 
-- {端} 6HK, OD竜巻, 強昇竜: 2728
+- 6HK, 竜巻: 1700
+- {端} 6HK, OD竜巻, 強昇竜: 3210
 
 ## DR HP
 
@@ -226,3 +250,9 @@
 https://note.com/nikotarosun/n/n11a2e2311fbd
 
 6HK, 竜巻は強弱がない。
+
+- 2HP, 強波掌
+
+- OD竜巻, DR 2MP, CR 2HP, 強足刀, 強昇竜
+- HP(pc), 2MK, CR HP, 4HP, 強足刀, 中昇竜
+- {気} HK(pc), HP, OD波掌(気), HP, OD竜巻, DR 2MP, CR 2HP, 強足刀, 強昇竜
