--- a/games/Street-Fighter/Six/characters/Ryu/リュウの差し合い.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの差し合い.md
@@ -15,6 +15,11 @@
 連続ガードでドライブゲージを1.6本削れる。
 ガード後はギリギリ密着の+4で、後歩きがシミーになる。
 
+## DR HP, 強波掌/強足刀
+
+- 強波掌: ガードされると6F遅れ
+- 強足刀: ガードされても-3で無敵技以外割り込めない
+
 ## 波動拳
 
 弱で有利をとって、強をジャンプに引っ掛ける。
