--- a/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
@@ -26,7 +26,7 @@
 - 2LK, MP, 2MP, OD足刀, 6HK, 竜巻: 2255
 - 2LK, MP, 2MP, OD足刀, 4HK, 強昇竜, SA3: 4250
 
-## MP
+## MP, 2MP
 
 - MP, 2MP, 強昇竜: 2320/2096
 - MP, 2MP, CR HP, 強波掌, 中足刀: 2696
@@ -37,10 +37,18 @@
 - MP, 2MP, CR HP, MP, 強昇竜, SA3: 4812/4658
 - MP, 2MP, CR HP, 強波掌, DR HP, 強昇竜, SA3: 5212/5100
 
+モダンあるいは密着以外。
+
 ## MP, 2HP (C限定)
 
 - MP, 2HP, 強昇竜: 2520
-- {端} MP, 2HP, 強足刀, 中昇竜: 3280 32F
+- {端} MP, 2HP, 強足刀, 中昇竜: 3280
+- {端} MP, 2HP, OD竜巻, DR 2MP, CR 2HP, 強足刀, 強昇竜: 3984
+- {端} MP, 2HP, 強足刀, 中昇竜, SA3: 5280
+- {端} MP, 2HP, CR HK, HP, CR HK, HP, 強昇竜, SA3: 5755
+- {端} MP, 2HP, OD竜巻, DR 2MP, CR 2HP, 強足刀, 強昇竜, SA3: 5984
+
+密着のみ。
 
 ## (気) MP
 
@@ -206,12 +214,14 @@
 ## DI(pc)
 
 - DI(pc), 6HP, 2MP, 強昇竜: 2860
-- DI(pc), 6HP, 2MP, CR HK, HP, 強昇竜: 3291
+- {中央} DI(pc), 6HP, 2MP, OD足刀, 前進, 6HK, 竜巻: 3175
 - {端} DI(pc), 4HP, 強足刀, 中昇竜: 3230 32F (C限定)
+- {端} DI(pc), 前進, MP, 4HP, 強足刀, 中昇竜: 3380 32F (C限定)
 - {端} DI(pc), 4HP, 強足刀, OD昇竜: 3470 28F (C限定)
+- {端} DI(pc), HK, 2MK, OD竜巻, 強昇竜: 3330 (C限定)
 - {端} DI(pc), 6HP, 2MP, OD竜巻, 強昇竜: 3320
+- DI(pc), 6HP, 2MP, CR HK, HP, 強昇竜: 3291
 - {端} DI(pc), 6HP, 2MP, OD竜巻, OD昇竜: 3420
-- DI(pc), HK, 2MK, OD竜巻, 強昇竜: 3330 (C限定)
 - DI(pc), 6HP, 2MP, CR HP, 4HP, 強足刀, 中昇竜: 3506 (C限定)
 - DI(pc), 6MP, 2MP, OD足刀, 前進, 6HK, 弱竜巻: 3175
 - DI(pc), HK, 2MK, OD足刀, 前進, 6HK, 弱竜巻: 3185 (C限定)
@@ -251,7 +261,7 @@ https://note.com/nikotarosun/n/n11a2e2311fbd
 
 6HK, 竜巻は強弱がない。
 
-- 2HP, 強波掌
+- DR HP/2HP, 強波掌
 
 - OD竜巻, DR 2MP, CR 2HP, 強足刀, 強昇竜
 - HP(pc), 2MK, CR HP, 4HP, 強足刀, 中昇竜
