--- a/games/Street-Fighter/Six/characters/Ryu/リュウの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの練習メニュー.md
@@ -3,11 +3,42 @@
 （ダミー設定 > ガード: ランダム）
 （ダミー設定 > 起き上がり: 後方受け身）
 
+## 対空
+
+（対空練習）
+
+- 2HP
+- 弱波動, {前方ジャンプ}, 強昇竜
+  - DR 投げ
+
+自分が何もしてなかったら2HP、中足や波動を出していたら昇竜で対空する。
+
 ## ラッシュ攻撃からのコンボ
 
-- DR MP(g), HP, 弱波掌, ガード
+（ダウンリバーサル: 4F技）
+
 - DR MP, HP, 強昇竜
+  - SA3
   - DR 投げ
+- DR MP(g), HP, ガード
+
+## ジャンプ攻撃からのコンボ
+
+（ダウンリバーサル: 4F技）
+
+- DR MP, HP, 強昇竜, ...
+- DR MP(g), HP, ガード
+
+## 弱攻撃からのコンボ
+
+- 2LP/2LK, LP, 弱竜巻
+  - ステップ, 前進, 投げ/後退
+- 2LP/2LK(g), LP, ガード
+
+## キャンセルラッシュ
+
+- 2MK, CR HP, 4HP, 強昇竜, ...
+- 2MK(g), CR MP, ...: ラッシュ攻撃からのコンボと同じ
 
 ## 飛び道具を使った差し合い
 
@@ -18,37 +49,54 @@
 
 波動の前に斜め後ろをしっかり入れるのが大事。
 
-## 対空
+## 昇竜やSAの確反 (C)
 
-（対空練習）
+（確反練習）
 
-- 2HP
-- 弱波動, {前方ジャンプ}, 強昇竜, DR 投げ
+- HK(pc), HP, 強昇竜, ...
 
-自分が何もしてなかったら2HP、中足や波動を出していたら昇竜で対空する。
+## DI(pc)からのコンボ
+
+（ドライブインパクトへの対応練習）
+
+- DI(pc), 6HP, 2MP, 強昇竜, ...
+
+## DI(pc)からのコンボ 2
+
+（ドライブインパクトへの対応練習）
+
+- {中央} DI(pc), 6HP, 2MP, OD足刀, 前進, 6HK, 竜巻
+  - ステップ 2回, 前投げ
+  - ステップ 2回, バクステ
+- {端} DI(pc), 6HP, 2MP, 強昇竜, SA3
+
+## DI(壁)
+
+- DI(壁), HP, 中波掌, 強昇竜
+  - SA3
+  - 2LK, 6MP(+2), 2LP, 弱足刀, J.HK, ...
+
+## 端の起き攻め
+
+（ガードリバーサル: 4F技）
+（ダウンリバーサル: 何もしない）
+（ダウンリバーサル: 通常投げ 3Fディレイ）
+
+- MP, 4HP, 強足刀, 中昇竜
+  - 2MP, 2MP(+3), 4HP, 強足刀, 中昇竜, ...
+  - 2MP, 2MP(+3)(g), ガード
+  - 2MP, 2MP(+3)(g), 2MP, 弱波掌, ガード
+  - 2MP, バクステ, {通常投げ}, HP(pc), 強足刀, 中昇竜, ...
+  - 2MP, 前投げ, ...
+- MP(g), ガード
 
 ## 柔道
 
 （反撃設定 > ダウンリバーサル: 4F技）
 
 - 前投げ, 前投げ, ...
-- 前投げ, {垂直ジャンプ}, 強昇竜, ...
-
-## 昇竜やSAの確反 (C)
-
-（確反練習）
-
-- HK(pc), HP, 強昇竜, SA3
-
-## DI(pc)
-
-（ドライブインパクトへの対応練習）
-
-- DI(pc), 6HP, 2MP, 強昇竜, SA3
-
-## DI(壁)
-
-## ジャンプ攻撃からのコンボ
+- 前投げ, 前投げ, {垂直ジャンプ}, 強昇竜, ...
+- 前投げ, MP, ...
 
 ## OD技に繋ぐコンボ
 
@@ -57,11 +105,6 @@
 - {端} 6HP, 2MP, OD竜巻, 強昇竜
 
 6HKを引きつけないと投げ間合いにならない。
-
-## 弱攻撃からのコンボ
-
-- 2LP/2LK, LP, 弱竜巻, ステップ, 投げ/後退
-- 2LP/2LK(g), LP, 弱波掌, ガード
 
 ## 弱攻撃からのコンボ
 
