--- a/shared/commerce/marketing/channels/イベント.md
+++ b/shared/commerce/marketing/channels/イベント.md
@@ -67,3 +67,5 @@ https://www.kokuchpro.com/
 
 「マルチの勧誘など、迷惑行為を見かけた方は運営まで連絡してください。」
 「サークルやイベントの雰囲気を乱す行動をされる方、運営側の指示に従っていただけない方は、参加をお断りする場合があります。」
+
+サークルは常連ばかりになると常連も個別に集まったりして来なくなる。常に新しいメンバーを取り込んでいかないといけない。停滞するとダメ。
