--- a/shared/game/ゲーム性.md
+++ b/shared/game/ゲーム性.md
@@ -1,1 +1,9 @@
 ゲームの醍醐味といえるルールややりがいを感じさせる要素を指して用いられることが比較的多い。
+
+ムジュラの仮面のゲームシステムの解説
+https://youtu.be/E0jRca-ijpY?si=iceQhAznerYXfoHN
+
+- 広がるのではなく深めるクローズワールド
+- 身近な人を救うことと世界を救うことが繋がっているゲーム性
+- サブクエでも身近な人を救うことが一貫している
+- できなかったことができるようになる、汎用的なアイテムの設計
