--- a/shared/logic/理解.md
+++ b/shared/logic/理解.md
@@ -32,4 +32,7 @@ https://youtu.be/89Kbf7aXMx0?si=oyRo-lWqOFmHSnp4
 
 どうやって理解していないことに気づくか。
 
-「人間はつねに、自分に理解できない事柄はなんでも否定したがるものである。」 パスカル
+「人間はつねに、自分に理解できない事柄はなんでも否定したがるものである。」（パスカル）
+
+「理性的である事で理解できなくなってしまうものもある。」
+『大魔導師と呼ばれた侯爵令嬢』
