--- a/shared/thinking/tips/批判的思考.md
+++ b/shared/thinking/tips/批判的思考.md
@@ -13,3 +13,7 @@
 疑うのは検証を伴うべきで、単に現実を否定するだけでは足りない。
 
 クリティカルシンキングは前提を疑う。経験や常識を外して考える。水平思考に近い。
+
+ネガティブさは自分で持つべきで、他人のネガティブな言葉は無視するべき。
+
+他人の意見は取り入れるべきだが、批判は聞かなくていい。ポジティブな意見に沿って、評価が高いことをより強化する。
