--- a/shared/art/技術.md
+++ b/shared/art/技術.md
@@ -139,3 +139,6 @@ engineeringは理論的。
 繊細で理論的な技術と、必要性に迫られたガサツで泥臭い技術。
 
 場当たり的で目先の解決を目指す救急救命術と根本的な解決を目指す治療術のどちらも必要。
+
+本当に卓越した技術は作品自体に需要がなくても技術を動画にしたりすると需要がある。
+あとは単純に手間がかかって普通はやらないことをするとか、古い方法をあえてするとかもエンタメ的には需要がある。
