--- a/games/Street-Fighter/Six/characters/Cammy/キャミィの対策.md
+++ b/games/Street-Fighter/Six/characters/Cammy/キャミィの対策.md
@@ -4,3 +4,6 @@
 差し合いでのスピンナックルは見てからコパンで返す。余裕があればもっと大きな確反でもいい。
 
 キャミィや豪鬼のように足元を狙って踏んでくる相手にはたまにバクステを置いて空振りに確反を入れるのはあり。
+
+大パンTCはガードしていると出し切りでもスパイクでも8F以内の技で割り込める。下段技はスパイクに負けるので中パンとかで。
+スパイクは4F技でも空中ヒットになるので、空中ヒットでもコンボになる技で拾うか、直接昇竜やSAでいい。
