--- a/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウのコンボ.md
@@ -236,11 +236,14 @@
 ## 弱波掌(c)
 
 - 弱波掌(c), 中足刀: 2040 (C限定)
+- {端} 弱波掌(c), 6HK, 竜巻: 2360
 - 弱波掌(c), DR 2MP, 強昇竜: 2302
 - 弱波掌(c), DR 2MP, 中竜巻: 2030
 - 弱波掌(c), SA1: 2840
 - 弱波掌(c), SA1(電刃): 3240
 - 弱波掌(c), DR 2MP, 強昇竜, SA3: 4342
+
+SA1以外は遠いと届かない。
 
 ## 中波掌(c)
 
