--- a/games/Street-Fighter/Six/characters/Ryu/リュウの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの練習メニュー.md
@@ -3,6 +3,13 @@
 （ダミー設定 > ガード: ランダム）
 （ダミー設定 > 起き上がり: 後方受け身）
 
+## 6HPからのコンボとセットプレイ
+
+- 6HP, 2MP, 強昇竜
+  - ステップ, 6HP, ...
+- 6HP(g), 2MP, 弱波動, 後退
+- 6HP(g), 後退
+
 ## 対空
 
 （対空練習）
