--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -763,3 +763,7 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 社会や他人に良い影響を与えること、貢献することで愛される。
 
 他人のためのビジネスと自分のためのビジネスがある。
+
+非営利の活動をビジネスに含めるべきかどうか。仕事ではあるけど。
+
+ビジネスは生活費を稼ぐのが目的ではない。生活費を稼ぐのはビジネスを続ける手段。
