--- a/shared/entertainment/リアクション.md
+++ b/shared/entertainment/リアクション.md
@@ -29,3 +29,7 @@
 上位者ほどリアクションを抑えないと、部下に変な影響を与える可能性がある。上位者はよくも悪くも一挙手一投足の影響が大きい。
 
 リアクションが賑やかなのは精神の健康にとって良いことだ。溜め込むよりもずっといい。
+
+反応が大きいほど、存在も大きい。
+
+反応が小さいということは、変化が小さい、愛が小さいということかも。
