--- a/shared/government/democracy/政治に参加する.md
+++ b/shared/government/democracy/政治に参加する.md
@@ -6,3 +6,11 @@
 
 自公維民の政治家やその支持者も別に悪意があるわけじゃなくて、本当にただただ無能なだけ。
 でも悪意よりも無能に対処する方が難しい。
+
+投票率が低いのは政治に興味がないというより、与党の政治に満足している。
+与党の政治に満足していたら別に投票に行かなくてもいい。投票しなかったら、当選した党の票になる。
+
+- 選挙に参加する
+- 代議士に立候補する
+
+投票率が増えたり、立候補者が増えたりするのは、いろんな人が政治活動しないとまずいと感じているから。
