--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -317,3 +317,6 @@ experienceとpractice自体はもっと一般的な文脈でいいかも。
 訓練しないと上手くならないけど、試練しないと強くならない。
 
 ミスった時のリカバリーも含めて練習する。
+
+学習はどこかで切り上げて、あとはとにかく練習しないといけない段階がある。
+でもまずは学習から。良い方法が分かってないのに練習しても良くならない。
