--- a/shared/work/仕事.md
+++ b/shared/work/仕事.md
@@ -320,3 +320,9 @@ Productと比べると、価値がなくても作業したらWorkになる。
 作るだけがWorkではなく、壊すのもWorkではある。
 
 Web小説の誤字報告なんかも別にお金をもらうわけではないけど仕事ではある。誤字報告によって文章が修正されれば影響を与えている。
+
+より大きな影響を与えるために、自分自身も学んで、慣れて、変化していく。
+
+影響の大きさは存在の大きさ。
+
+workとinfluenceは近い。
