--- a/games/Street-Fighter/Six/characters/Ryu/リュウの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの練習メニュー.md
@@ -3,31 +3,33 @@
 （ダミー設定 > ガード: ランダム）
 （ダミー設定 > 起き上がり: 後方受け身）
 
-## 6HPからのコンボとセットプレイ
-
-- 6HP, 2MP, 強昇竜
-  - ステップ, 6HP, ...
-- 6HP(g), 2MP, 弱波動, 後退
-- 6HP(g), 後退
-
-## 対空
-
-（対空練習）
-
-- 2HP
-- 弱波動, {前方ジャンプ}, 強昇竜
-  - DR 投げ
-
-自分が何もしてなかったら2HP、中足や波動を出していたら昇竜で対空する。
-
 ## ラッシュ攻撃からのコンボ
 
 （ダウンリバーサル: 4F技）
 
 - DR MP, HP, 強昇竜
   - SA3
-  - DR 投げ
-- DR MP(g), HP, ガード
+  - ステップ, 6HP, ...
+  - ステップ, 前進, 後退
+- DR MP(g), 後退
+
+## 飛び道具と対空
+
+（対空練習）
+
+- 強波動, {前方ジャンプ}, 強昇竜, ...
+- 弱波動, {ガード}, 強波動: ジャンプできないタイミングで重ねる
+- 2HP: 波動拳を撃ってない時
+
+自分が何もしてなかったら2HPで、中足や波動を出していたら昇竜で対空する。
+
+## 6HPからのコンボ
+
+- 6HP, 2MP, 強昇竜, ...
+- {中央} 6HP, 2MP, OD足刀, 4HK, 強昇竜, ...
+- {端} 6HP, 2MP, OD竜巻, 強昇竜
+  - HK, 投げ/後退
+- 6HP(g), 2MP, 後退: 2MPが届かない距離なら何もせずに後退する
 
 ## ジャンプ攻撃からのコンボ
 
@@ -110,6 +112,7 @@
 - {中央} 6HP, 2MP, OD足刀, 前進, 6HK, 弱竜巻
   - ステップ 2回, 投げ
 - {端} 6HP, 2MP, OD竜巻, 強昇竜
+  - HK, 投げ/後退
 
 6HKを引きつけないと投げ間合いにならない。
 
