--- a/games/Street-Fighter/飛び道具の考え方.md
+++ b/games/Street-Fighter/飛び道具の考え方.md
@@ -119,3 +119,8 @@ https://youtube.com/watch?v=r4pAE0sdk8s&si=Yex61e6pyGxq_Vxf
 
 弾は、見てから飛べない距離か、ジャンプ攻撃が届かない距離で撃つのが基本。
 キャンセルできる攻撃をガードさせて撃つのも見てから飛べない。
+
+近、中距離の弾は強が基本。飛ばれにくい。
+
+飛び道具使うのが苦手なら、差し合いがそもそも苦手なのかも。
+飛び道具は差し合いの延長。判定がクソ強くて隙の大きい長い技でしかない。
