--- a/shared/care/responsibility/自由.md
+++ b/shared/care/responsibility/自由.md
@@ -81,3 +81,7 @@
 
 自由になるためには、自由に動いても一貫性を持たせる秩序が必要だ。
 秩序の基礎がない自由は自然でしかない。
+
+本当に自分勝手に振る舞いたいなら、全てを自分でできないといけない。
+たとえばVtuberだったら、個人勢でも絵や3D、2Dモデルを作っている人が関わっていて、それに見放されると続けられない。
+逆に、それらの感覚が一致する人なら見放されない。
