--- a/shared/communication/秘密を守る.md
+++ b/shared/communication/秘密を守る.md
@@ -1,1 +1,8 @@
 相手の秘密を守ることを示すために、自分の秘密を開示することがある。
+
+悪意がなくても自制心がなくてぽろっと秘密をこぼしてしまうような人には秘密を共有できない。酒に弱いのに飲む人もダメ。
+
+人の口に戸は立てられない。
+人が関わった時点で秘密はいつか漏れる。秘密が漏れる前に発表しないといけない。
+
+秘密が一人にバレたら全員にバレたと思っていい。それ以上無理に隠す意味はない。
