--- a/shared/love/嫌いと怖いを分ける.md
+++ b/shared/love/嫌いと怖いを分ける.md
@@ -1,3 +1,8 @@
 嫌いな人に注意を払うのは、その人を危険だと思っているから。
 嫌いと怖いは分けて考えた方がいい。嫌いなら無視するべきで、怖いなら殺すべき。蛇やゴキブリと同じ扱いが正しい。
 現実には人を殺すとまずいので徹底的に追い詰めて排除した方がいい。
+
+嫌いなものと怖いもの＝危ないものを分けて考えられないと、嫌いなだけで別に怖くないものをずっと監視して無駄に消耗してしまう。逆に怖いものから目を背けて何も対処しないこともある。
+嫌いなものからは離れて、怖いものは監視する必要があったら監視したり必要なかったら離れたりと対処を変えないといけない。
+
+危ないものからは離れるのが基本だけど、政治家とか離れられない場合は積極的に潰しに行かないといけない。
