--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -65,3 +65,5 @@
 社交の基礎は挨拶、笑顔、配慮の3点セット。特に相手のために自分から積極的に動く配慮が大事。
 
 女性は社交が強くて仕事が弱い。社交が好きな人は仕事向きではない。
+
+人に対して悪意を持って接すると、相手にも悪意を持った人しか残らない。善き人は淘汰されてしまう。
