--- a/shared/society/社交の成否.md
+++ b/shared/society/社交の成否.md
@@ -1,3 +1,7 @@
-社交の失敗とは、相手との関係が切れること。
+個々の社交の失敗とは、相手との関係が切れること。
 
 相手の印象に残って、相手に信頼されないと関係が続かない。
+
+社交の目的は福祉を得ること。
+周りが自分を積極的に生かそうとすること。
+誰かに嫌われてでも誰かに好かれないと意味がない。でも恨まれるのはダメ。
