--- a/shared/society/社会的な性別.md
+++ b/shared/society/社会的な性別.md
@@ -6,3 +6,7 @@ man/woman.
 男らしさとか女らしさも。
 
 肉体的な性別はSexという。male/female.
+
+心理的な性別ではない。社会や他人がどっちだと思うか。自認はどうでもいい。
+
+社会的な性別は、自分がどう思うかではなく、他人がどう思うかで決まるべき。
