--- a/study/economics/バブル.md
+++ b/study/economics/バブル.md
@@ -1,1 +1,5 @@
-なにもわからない人が参入してきたらバブルになっている。一つの指標。
+なにもわからない人が参入してきたらバブルになっている。一つの指標。くず品に高値がつき始めるのも特徴。
+
+本来の需要を超えた価格がバブルの特徴。需要のないくず品まで価格が上がったら、買わないだけじゃなくて、投資を片っ端から引き払うことまで考えたほうがいいかも。
+
+株式投資は潜在的な価値がどのくらいか判断しないといけない。どこまで伸びるか、あるいは最悪の場合いくらになるか。
