--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -85,6 +85,7 @@
 
 ## {空} 2MP, 中スピン-Sハーベスト, 中ホーン: 36
 
+- 弱リンク-マレット: 中段、カウンターで2LPが入る
 - ステップ
   - 6HP: インパクトを返せる
 - {端} +36
@@ -494,10 +495,12 @@ Cだと受け身を見てHKと3HKを出し分ける。
 - DR 投げ: 目押し
 - ステップ
   - 6HP
+  - 前進, HP
   - 前進, 2MK
   - DR 2LK, MK
   - DR MK, MK
 - 弱リンク: +6
+  - マレット: 中段、4F技と相打ちか、遠かったら潰すが追撃は届かない
   - {その場受け身} 投げ
   - 後退: シミー
 - {端} 2MK: +5
@@ -557,6 +560,7 @@ Cだと受け身を見てHKと3HKを出し分ける。
 ## 強スピン, DR 2MP, 強ホーン: 38
 
 - ステップ, 6HP
+- 弱リンク-マレット: 追撃は届かない
 
 ## 強/ODスピン, ODホーン: 42/41
 
@@ -683,8 +687,8 @@ ODホーンの3段目が端専用の当たり方をしないと入らない。
 
 ## 通常ホーン: 39
 
-- 弱リンク-HK(+2)
-- 弱リンクS-LK
+- 弱リンク-マレット(+2): ヒットしたら2LPが入る
+- 弱リンク-Sレオパード
 - {端} 弱リンク, 2MK
 - {端} 中リンク, 通常投げ
 - {端} +39
