--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -93,12 +93,12 @@ DR 6MPは相打ちでもコンボになる。
 
 （確定反撃の練習）
 
-- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン
-  - DR 6MK/2LK/投げ, ...
-- {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱昇竜
-  - 弱リンク, 後退
-  - 弱リンク, MK(+3), MK-HK, 弱ホーン, 強昇竜
-  - 弱リンク, MK(+3)(g), 前投げ
+1. HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン, 弱リンク, 後退
+2. HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱昇竜, 弱リンク, 後退
+3. HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜 2回, 弱リンク
+4. MP(+2), MP-HK, 弱ホーン, 強昇竜, LK, 前投げ
+
+端から始める。
 
 ## 弱攻撃のコンボ
 
