--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -640,6 +640,17 @@ ODホーンの3段目が端専用の当たり方をしないと入らない。
 
 後退に弱いのに使える下段が2MKくらいしかない。
 
+## マレット: 2
+
+- 投げ
+- 2LK, 2LP
+- バクステ, 2MK: 猶予がギリギリで難しい
+
+遠いと2LPが届かなかったり1回しか届かなかったりする。
+LKならほぼ届くけど、リターンが少ないので無理に触らなくていい。
+
+密着でも弱攻撃3回は届かない。
+
 ## Sマレット(g): 3
 
 - 投げ
