--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -151,6 +151,9 @@ BOさせた後がなんか弱い。何かないかな。
 
 バクステが長すぎて2MPが届かないので、一度密着するとシミーするのも難しい。
 
+マレットで密着できるなら一応900入って+2から投げや2LPで
+マレットから2LPが2回届く
+
 ## 中央の攻め
 
 エレナは中央の攻めが弱い。
