--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -14,49 +14,34 @@
 
 ## 2LP
 
-- 2LP, 2LP, 強昇竜: 1520
-- 2LP, 2LP, 弱スピン: 1170
-- {立} 2LP, 2LP, 弱ホーン: 1310
-- {立端} 2LP, 2LP, 弱ホーン, 中昇竜: 1910
-- {立} 2LP, 2LP, ODホーン, 強昇竜: 2080
-- {立端} 2LP, 2LP, 弱ホーン, OD昇竜: 2110
-- 2LP, 2LP, CR 2LP, 2HP, 強スピン, 中ホーン: 1929
-- 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン: 2000
-- {端} 2LP, 2LP, CR 2LP, 2HP, 強スピン, 弱ホーン, 強ホーン: 2016
-- {立} 2LP, 2LP, ODホーン, OD昇竜: 2180
-- 2LP, 2LP, SA1, 強昇竜: 2180
-- {立} 2LP, 2LP, ODホーン, SA1, 強昇竜: 2380
-- {立} 2LP, 2LP, ODホーン, SA2: 2780
-- 2LP, 2LP, CR 2LP, 2HP, 強スピン, SA2: 2749 (h:2409)
-- 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, ODグライド-6P, SA2: 3069
-- 2LP, 2LP, SA3: 3340
-- {立} 2LP, 2LP, 弱ホーン, SA3: 3310
-- 2LP, 2LP, CR 2LP, 2HP, 強スピン, SA3: 3629
-- 2LP, 2LP, CR 2LP, 2HP, 強ホーン, SA3: 3671
-- 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4000
+- 2LP 2回, 2LP/LK, 強昇竜: 1590
+- 2LP 3回, 弱スピン: 1290
+- {立} 2LP 3回, LK, 弱ホーン: 1480
+- {立端} 2LP, 2LP/LK, 弱ホーン, 中昇竜: 1910
+- {立} 2LP, 2LP/LK, ODホーン, 強昇竜: 2080
+- 2LP, 2LP/LK, CR 2LP, 2HP, 強スピン, 中ホーン: 1929
+- 2LP, 2LP/LK, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン: 2000
+- {端} 2LP, 2LP/LK, CR 2LP, 2HP, 強スピン, 弱ホーン, 強昇竜: 2016
+- {立} 2LP, 2LP/LK, ODホーン, OD昇竜: 2180
+- 2LP, 2LP/LK, SA1, 強昇竜: 2180
+- {立} 2LP, 2LP/LK, ODホーン, SA1, 強昇竜: 2380
+- {立} 2LP, 2LP/LK, ODホーン, SA2: 2780
+- 2LP, 2LP/LK, CR 2LP, 2HP, 強スピン, SA2: 2749 (h:2409)
+- 2LP, 2LP/LK, CR 2LP, 2HP, 強スピン, DR 2MP, ODグライド-6P, SA2: 3069
+- 2LP, LK, SA3: 3340
+- {立} 2LP, 2LP/LK, 弱ホーン, SA3: 3310
+- 2LP, 2LP/LK, CR 2LP, 2HP, 強スピン, SA3: 3629
+- 2LP, 2LP/LK, CR 2LP, 2HP, 強ホーン, SA3: 3671
+- 2LP, 2LP/LK, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4000
 
-## 2LP, LK
-
-- 2LP, LK, 強昇竜: 1520
-- {立} 2LP, LK, 弱ホーン: 1310
-- {立端} 2LP, LK, 弱ホーン, 中昇竜: 1910
-- 2LP, LK, OD昇竜: 1660
-- 2LP, LK, CR 2LP, 2HP, 強スピン, 中ホーン: 1929
-- {端} 2LP, LK, CR 2LP, 2HP, 強スピン, 弱ホーン, 強昇竜: 2016
-- {立} 2LP, LK, ODホーン, 強昇竜: 2080
-- {立} 2LP, LK, ODホーン, SA1, 強昇竜: 2380
-- 2LP, LK, CR 2LP, 2HP, 強スピン, DR 2MP, CR 2HP, SA1, 強昇竜: 2527
-- {立} 2LP, LK, ODホーン, SA2: 2780
-- 2LP, LK, CR 2LP, 2HP, 強スピン, SA2: 2749
-- 2LP, LK, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4000
-
-Sレオパードの後とか、2LPが1回しか入らない場合はこれしか入らない。
+2LPの射程ギリギリだとLKしか届かない。
 
 ## 2LP(+4)
 
-- 2LP(+4), 2HP, 強ホーン: 1850
-- 2LP(+4), MK-HK, ODスピン-リンクMK, 中ホーン: 2220
-- 2LP(+4), MK-HK, ODスピン-リンクMK, SA2: 3560
+- 2LP(+4), 2HP, 強スピン, 中ホーン: 2380
+- 2LP(+4), 2HP, 強スピン, SA2: 3180
+- {端} 2LP(+4), 2HP, 強スピン, 中ホーン, SA3: 4380
+- 2LP(+4), 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4474
 
 ## 2LP(+4), 2MP
 
@@ -77,13 +62,17 @@ MKや2HPは近くないと届かないので2MPの方が確実。
 
 ## 2LK
 
-- 2LK, 2LP, 強昇竜: 1420 (AC1)
-- 2LK, 2LP, 弱スピン: 1070
-- 2LK, 2LP, SA1, 強昇竜: 1752
-
-## 2LK, 2LP, CR 2LP
-
+- 2LK, 2LP 2回, 強昇竜: 1490
+- 2LK, 2LP 2回, 弱スピン: 1190
+- {立} 2LK, 2LP 2回, LK, 弱ホーン: 1380
+- {立端} 2LK, 2LP, 弱ホーン, 中昇竜: 1810
+- {立} 2LK, 2LP, ODホーン, 強昇竜: 1980
+- {立端} 2LK, 2LP, 弱ホーン, OD昇竜: 2010
 - 2LK, 2LP, CR 2LP, 2HP, 強スピン, 中ホーン: 1829
+- 2LK, 2LP 2回, SA1, 強昇竜: 1970
+- 2LK, 2LP, CR 2LP, 2HP, 強スピン, SA2: 2649
+- {立} 2LK, 2LP 2回, LK, 弱ホーン, SA3: 3380
+- 2LK, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 3900
 
 ## 2LK(+4)
 
@@ -92,6 +81,12 @@ MKや2HPは近くないと届かないので2MPの方が確実。
 - {端} 2LK(+4), MK-HK, 弱ホーン, 強昇竜: 2100
 - 2LK(+4), MK-HK, ODスピン-Sハーベスト, 中ホーン: 2120
 - 2LK(+4), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン: 2295
+- 2LK(+4), MK-HK, SA1, 強昇竜: 2200
+- 2LK(+4), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, SA1, 強昇竜: 2851
+- 2LK(+4), MK-HK, SA2: 2560
+- 2LK(+4), MK-HK, ODスピン-Sハーベスト, SA2: 2880
+- 2LK(+4), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, SA2: 3319
+- 2LK(+4), MK-HK, 強ホーン, SA3: 3660
 - 2LK(+4), MK-HK, ODスピン-Sハーベスト, 中ホーン, SA3: 4120
 - 2LK(+4), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン, SA3: 4295
 
@@ -506,6 +501,19 @@ MKは近くないと当たらない。
 
 ## Sマレット(c)
 
+- Sマレット(c), MK-HK, 強昇竜: 2720
+- Sマレット(c), MK-HK, 強ホーン: 2660
+- {端} Sマレット(c), MK-HK, 弱ホーン, 強昇竜: 3100
+- Sマレット(c), MK-HK, ODスピン-Sハーベスト, 中ホーン: 3120
+- Sマレット(c), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン: 3295
+- Sマレット(c), MK-HK, SA1, 強昇竜: 3200
+- Sマレット(c), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, SA1, 強昇竜: 3851
+- Sマレット(c), MK-HK, SA2: 3560
+- Sマレット(c), MK-HK, 0Dグライド-6P, SA2: 4030 (M:3824)
+- Sマレット(c), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, SA2: 4319
+- Sマレット(c), MK-HK, 強ホーン, SA3: 4660
+- Sマレット(c), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン, SA3: 5295
+
 ## 強グライド(pc)
 
 - 強グライド(pc), MK-HK, 強ホーン: 2690
@@ -530,23 +538,32 @@ MKは近くないと当たらない。
 
 - DI(壁), 2MP, 中スピン-Sハーベスト, 弱ホーン, 中昇竜: 3390
 - DI(壁), 2MP, 中スピン-Sハーベスト, 弱昇竜, 弱昇竜: 3380
-- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 弱ホーン, 強昇竜: 3489
-- DI(壁), 2MP, 中スピン-Sハーベスト, 弱ホーン, OD昇竜: 3510
+- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, 中昇竜: 3556
+- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, OD昇竜: 3622
 - DI(壁), 2MP, 中スピン-Sハーベスト, SA1, 強昇竜: 3480
+- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, SA1, 強昇竜: 3726
 - DI(壁), 2MP, 中スピン-Sハーベスト, SA2: 3880
-- DI(壁), 2MP, 中スピン-Sハーベスト, ODホーン, SA2: 4000
-- DI(壁), 2MP, 中スピン-Sハーベスト, 弱ホーン, SA3: 5030
-- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 弱ホーン, 強昇竜: 3489
+- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, SA2: 4222
+- DI(壁), 2MP, 中スピン-Sハーベスト, 中ホーン, SA3: 5080
+- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 中ホーン, SA3: 5402
 
 ## DI(g)(壁)
 
-- DI(g)(壁), 2MP, 中スピン-リンク-MK, 弱ホーン, 中昇竜: 2888
-- DI(g)(壁), HP-HP, DR 2HP, 中スピン-リンク-MK, 弱ホーン, 強昇竜: 3168
-- DI(g)(壁), 2MP, 中スピン-リンク-MK, SA1, 強昇竜: 3104
+- DI(壁), 2MP, 中スピン-Sハーベスト, 弱ホーン, 中昇竜: 2888
+- DI(壁), 2MP, 中スピン-Sハーベスト, 弱昇竜, 弱昇竜: 2832
+- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, 中昇竜: 3178
+- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, OD昇竜: 3284
+- DI(壁), 2MP, 中スピン-Sハーベスト, SA1, 強昇竜: 3104
+- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, SA1, 強昇竜: 3236
+- DI(壁), 2MP, 中スピン-Sハーベスト, SA2: 3360
+- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, SA2: 3634
+- DI(壁), 2MP, 中スピン-Sハーベスト, 中ホーン, SA3: 4464
+- DI(壁), HP-HP, DR 2HP, 中スピン-Sハーベスト, 中ホーン, SA3: 4922
 
 ## SA1
 
 - SA1, 強昇竜: 2780
+- SA1, OD昇竜: 2920
 
 ## その他
 
