--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -111,23 +111,16 @@ DR 6MPは相打ちでもコンボになる。
 起き攻めが間合いギリギリで難しい。
 実践的にはDR 2LKが無難。
 
-## 端のインパクトと弱昇竜からの攻め
+## 端のインパクトからのコンボと攻め
 
-（反撃設定 > ダウンリバーサル: 通常投げ 3Fディレイ）
-（反撃設定 > ダウンリバーサル: 何もしない）
-（反撃設定 > ガードリバーサル: 通常投げ 3Fディレイ）
-（反撃設定 > ガードリバーサル: 何もしない）
+（反撃設定 > ガードリバーサル: 4F技）
 
-- DI(壁), 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱昇竜
-  - 弱リンク
-    - MK(+3), MK-HK, 弱ホーン, 強昇竜, LK
-      - 前投げ, DI, ...
-      - 後退, {通常投げ}, 2MP: シミー
-    - MK(+3)(g), 前投げ, DI, ...
-    - MK(+3)(g), 後退, {通常投げ}, 2MP: シミー
-    - 後退, {通常投げ}, 2MP: シミー
+- DI(壁), 2MP, 中スピン-Sハーベスト, 弱昇竜 2回, 弱リンク
+  - MK(+3), MK-HK, 弱ホーン, 弱昇竜, 弱リンク, ...
+  - MK(+3)(g), 前投げ, DI, ...
+  - 後退
 
-ヒットもガードも同じルートでいい。
+壁ドンはヒットもガードも同じルートでいい。
 
 ## キャンセルラッシュ
 
