--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -507,10 +507,12 @@ MKは近くないと当たらない。
 - Sマレット(c), MK-HK, ODスピン-Sハーベスト, 中ホーン: 3120
 - Sマレット(c), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン: 3295
 - Sマレット(c), MK-HK, SA1, 強昇竜: 3200
+- Sマレット(c), MK-HK, ODスピン-Sハーベスト, SA1, 強昇竜: 3440
 - Sマレット(c), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, SA1, 強昇竜: 3851
 - Sマレット(c), MK-HK, SA2: 3560
 - Sマレット(c), MK-HK, 0Dグライド-6P, SA2: 4030 (M:3824)
-- Sマレット(c), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, SA2: 4319
+- Sマレット(c), MK-HK, 0Dスピン-Sハーベスト, SA2: 3880
+- Sマレット(c), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, SA2: 4319 (h:3979)
 - Sマレット(c), MK-HK, 強ホーン, SA3: 4660
 - Sマレット(c), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン, SA3: 5295
 
