--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -63,9 +63,10 @@ MKの持続当てはド密着が強い。
 - MK-HK, 強ホーン
 - {端} MK-HK, 弱グライド-6P
 - MK-HK(g)
-  - 弱グライド: 5F技と相打ち
+  - 弱グライド: 5F遅れ
   - 強グライド: 4F技を差し返してMKが入る
 - MK(g)-HK, 弱グライド
+- MK(g)-HK, CR MK: 連続ガード
 
 中央ではガードされた時しか弱グライドが届かない。
 端ではヒットでもガードでも弱グライドまで出していい。
@@ -169,14 +170,18 @@ DR MK(+3)がヒットするとHP-HPも入る。
 
 生のハーベストは強化版でも強いわけじゃないのでコンボ用かも。単発で使う利点があまりない。一応、ゲージを使わなくても少し火力を伸ばしやすいくらい。
 
+## マレット: 35-42
+
++39までは弱、+42までは強で重ねる。
+
 ## マレット(+2): 39, 41, 42
 
 強弱でタイミングを変えて持続当てできる。
 ただ、ヒットストップが短くてヒット確認するのが難しい。
 
-## Sマレット: 53-56, 55-58, 56-59, 37-40
+## Sマレット: 53-59, 37-40
 
-リンクシンクの強弱で発生が変わる。当たったら同じ。
++56までは弱リンク、+59までは強リンクで重ねる。OD版は+37から。
 
 ガードされても投げ間合いで+3になって、しかも後退がシミーになる。
 
