--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -43,7 +43,9 @@
 - DR 2LK, MK = {C} HK
 - 2HK
 - 6HP
-- ハーベスト
+- DR 2LP, 2MP
+- DR 2LK, LK
+- 弱リンク-ハーベスト
 - DR MK, 2MP
 - DR 6MK, MK
 - DR 2MK, 2MP
