--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -493,16 +493,13 @@ Cだと受け身を見てHKと3HKを出し分ける。
 - DR 2LK, MK: 目押し
 - DR 6MK, MK: 目押し
 - DR 投げ: 目押し
-- ステップ
-  - 6HP
-  - 前進, HP
-  - 前進, 2MK
-  - DR 2LK, MK
-  - DR MK, MK
-- 弱リンク: +6
-  - マレット: 中段、4F技と相打ちか、遠かったら潰すが追撃は届かない
-  - {その場受け身} 投げ
-  - 後退: シミー
+- ステップ, 6HP
+- ステップ, 前進, HP
+- ステップ, 前進, 2MK
+- 弱リンク, 後退: 様子見、その場受け身でも投げの外
+- 弱リンク, {その場受け身}, 投げ
+- 弱リンク, {後方受け身}, 6HP: 10F遅れ、差し返し気味に弱・中攻撃を潰す
+- 中リンク-マレット: 中段、6F遅れ、後方受け身からの暴れは差し返し気味に潰す
 - {端} 2MK: +5
   - 後退: シミー
 
