--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -45,7 +45,7 @@
 - 6HP(g), ガード
 - 6HP-HP-HP
   - 弱リンク, 後退
-  - 弱リンク-3Sレオパード, ...
+  - 弱リンク-強Sレオパード, ...
 - {端} 6HP-HP-HP
   - HP, 前投げ/後退
 
@@ -53,7 +53,7 @@
 
 6HPのTC派生は猶予が長いので、まずはどこまで遅らせてもコンボになるか試すところから始めるといい。
 
-Sレオパードは斜め前入れじゃないと追撃が届かないので注意。
+Sレオパードは強スワールジャないと追撃が届かないので注意。
 
 ## ラッシュ攻撃からのコンボ
 
