--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -301,8 +301,12 @@ MKは近くないと当たらない。
 - 2MK-HK, 弱リンク-LK: 1480
 - 2MK-HK, ODホーン, 強昇竜: 2460
 - 2MK-HK, ODホーン, OD昇竜: 2560
+- 2MK-HK, ODホーン, SA1, 強昇竜: 2760
+- 2MK-HK, CR MK, 2HP, 強スピン, DR 2MP, SA1, 強昇竜: 2929
 - 2MK-HK, SA2: 2880
 - 2MK-HK, ODホーン, SA2: 3160
+- 2MK-HK, CR MK, 2HP, 強スピン, SA2: 3247
+- 2MK-HK, CR MK, 2HP, 強スピン, DR 2MP, SA2: 3397
 - 2MK-HK, 強ホーン, SA3: 3830
 - 2MK-HK, CR MK, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4498
 
