--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -145,7 +145,24 @@ DR MK(+3)がヒットするとHP-HPも入る。
 
 中段。ガードされても+2からMKで固めてもいいし、ヒットしたらMKが繋がる。
 
-## Sレオパード: 38-44, 40-46, 41-47, 22-28
+## マレット: 35-42
+
++39までは弱、+42までは強で重ねる。
+
+## Sハーベスト: 38-46, 22-27
+
+リンクシンクの強弱で発生が変わる。当たったら同じ。
+
+相手が後方受け身するとガードされても確反が届かなくなりやすい。
+逆に、その場受け身してくるなら転がって通常技が強くなる。
+
+48-52Fも2段目のみヒットになるけど安いのであまり使いたくない。
+
+生のハーベストは強化版でも強いわけじゃないのでコンボ用かも。単発で使う利点があまりない。一応、ゲージを使わなくても少し火力を伸ばしやすいくらい。
+
+## Sレオパード: 38-47, 22-28
+
++44までは弱リンク、+47までは強リンクから。
 
 本命はマレット。
 レオパードはあくまでも相手の暴れを潰すための択。
@@ -158,21 +175,6 @@ DR MK(+3)がヒットするとHP-HPも入る。
 リンクスワールにも強弱があって移動距離が違うけど発生は同じ。
 
 1F足りなくて4F技と相打ちでも+8は取れるので、2MPからコンボになる。
-
-## Sハーベスト: 38-43, 40-45, 41-46, 22-27
-
-リンクシンクの強弱で発生が変わる。当たったら同じ。
-
-相手が後方受け身するとガードされても確反が届かなくなりやすい。
-逆に、その場受け身してくるなら転がって通常技が強くなる。
-
-48-52Fも2段目のみヒットになるけど安いのであまり使いたくない。
-
-生のハーベストは強化版でも強いわけじゃないのでコンボ用かも。単発で使う利点があまりない。一応、ゲージを使わなくても少し火力を伸ばしやすいくらい。
-
-## マレット: 35-42
-
-+39までは弱、+42までは強で重ねる。
 
 ## マレット(+2): 39, 41, 42
 
